[package]
name = "quake_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
byteorder = "1.4.3"
cgmath = "0.18.0"
crossbeam-channel = "0.5.8"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
once_cell = "1.17.1"
wgpu = "0.16.0"
winit = "0.28.6"
